gccida/c3/gen_rtvec
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1200:18: error: expected expression
v20 = *( _OWORD *)&v2[v18 * 2 + 2]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1200:10: error: use of undeclared identifier '_OWORD'
v20 = *( _OWORD *)&v2[v18 * 2 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1202:12: error: expected expression
*( _OWORD *)result[v18 + 1].elem = v20; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1202:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v18 + 1].elem = v20; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1203:18: error: expected expression
v21 = *( _OWORD *)&v2[v18 * 2 + 6]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1203:10: error: use of undeclared identifier '_OWORD'
v21 = *( _OWORD *)&v2[v18 * 2 + 6]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1205:12: error: expected expression
*( _OWORD *)result[v18 + 3].elem = v21; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1205:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v18 + 3].elem = v21; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1206:18: error: expected expression
v22 = *( _OWORD *)&v2[v18 * 2 + 10]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1206:10: error: use of undeclared identifier '_OWORD'
v22 = *( _OWORD *)&v2[v18 * 2 + 10]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1208:12: error: expected expression
*( _OWORD *)result[v18 + 5].elem = v22; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1208:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v18 + 5].elem = v22; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1209:18: error: expected expression
v23 = *( _OWORD *)&v2[v18 * 2 + 14]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1209:10: error: use of undeclared identifier '_OWORD'
v23 = *( _OWORD *)&v2[v18 * 2 + 14]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1211:12: error: expected expression
*( _OWORD *)result[v18 + 7].elem = v23; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1211:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)result[v18 + 7].elem = v23; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1227:18: error: expected expression
v26 = *( _OWORD *)&v2[v24 / 8 + 2]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1227:10: error: use of undeclared identifier '_OWORD'
v26 = *( _OWORD *)&v2[v24 / 8 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/emit-rtl.c:1229:12: error: expected expression
*( _OWORD *)&result[1].elem[v24 / 8] = v26; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/gen_rtvec/src/obj/emit-rtl.o] Error 1
